--- a/reactif/package.json
+++ b/reactif/package.json
@@ -1,31 +1,16 @@
 {
-  "name": "atividade_caixa_ui",
+  "name": "reactif",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "axios": "^0.21.1",
-    "framer-motion": "^4.1.11",
-    "history": "^5.0.0",
-    "mime": "^1.6.0",
-    "primeflex": "^2.0.0",
-    "primeicons": "^4.1.0",
-    "primereact": "^6.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-history-router": "^1.4.1",
     "react-if": "^4.0.1",
-    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "react-transition-group": "^4.4.1",
-    "sanitizer": "^0.1.3",
-    "styled-components": "^5.2.3",
-    "typescript": "^4.2.4",
-    "use-sound": "^2.1.1",
-    "web-vitals": "^1.0.1",
-    "webpack": "4.44.2"
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
